--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,18 +6,22 @@
     --default-font-family: 'Poppins', sans-serif;
     --heading-font-color: #B29E89;
     --secondary-font-color: #A7BFA7;
-    --branding-image: url("images/linen.svg");
-    --button-box-shadow: 12px 13px 0px 2px #FFFFFF;
+    --branding-image: url(/images/linen.jpg);
+    --button-box-shadow: 9px 7px 0px 1px #FFFFFF;
 }
 
 body {
   font-family: var(--default-font-family);
   background-color: var(--primary-page-color);
+  text-align: center;
 }
 
 nav {
     background-color: var(--header-footer-color);
-    
+}
+
+nav li {
+  margin-left: 15px;
 }
 
 nav li a {
@@ -31,11 +35,97 @@ nav li .active {
   color: black !important;
 }
 
-.logo {
+nav .logo {
  position: absolute;
- max-width: 100.5px;
- top: -18px;
+ max-width: 83px;
+ top: 0;
  padding: 0;
 }
 
+h2 {
+  font-size: 64px;
+  font-family: var(--heading-font-family);
+  color: var(--heading-font-color);
+}
 
+footer {
+  background-color: var(--header-footer-color);
+  padding: 8px;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  padding: 0 10px;
+}
+
+footer a:hover {
+  color: black;
+  transition: all 100ms ease-in-out;
+}
+
+.hero {
+  padding: 120px 20px;
+  background: var(--branding-image);
+  background-attachment: local;
+  background-repeat: inherit;
+  background-position: center;
+  -webkit-background-size: cover;
+}
+
+.hero h2 {
+  font-size: 38px;
+  font-family: var(--default-font-family);
+  color: black;
+}
+
+.hero h1 {
+  font-size: 96px;
+  font-family: var(--heading-font-family);
+  color: var(--heading-font-color);
+}
+
+.hero h3 {
+  font-size: 28px;
+  font-weight: lighter;
+}
+
+.btn-branding {
+  background: black;
+  color: white;
+  border-radius: 0;
+  box-shadow: var(--button-box-shadow);
+  padding: 4px 35px;
+}
+
+.btn-branding:hover {
+color: var(--secondary-page-color);
+}
+
+.middle-hero {
+   padding: 20px 10px;
+   background-color: var(--secondary-page-color);
+}
+
+.middle-hero img {
+  max-width: 200px;
+  margin: 0;
+}
+
+.middle-hero a {
+margin-top: 80px;
+}
+
+.bottom-hero {
+  padding: 30px 20px;
+}
+
+.bottom-hero img {
+  padding: 20px;
+}
+
+.bottom-hero img:hover {
+opacity: 0.5;
+transition: all 130ms ease-in-out;
+}
