Created contact page

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -73,8 +73,6 @@ footer a:hover {
 .hero {
   padding: 120px 20px;
   background: var(--branding-image);
-  background-attachment: local;
-  background-repeat: inherit;
   background-position: center;
   -webkit-background-size: cover;
 }
@@ -123,6 +121,7 @@ color: var(--secondary-page-color);
 
 .bottom-hero img {
   padding: 20px;
+  max-width: 330px;
 }
 
 .bottom-hero img:hover {
@@ -131,7 +130,7 @@ transition: all 130ms ease-in-out;
 }
 
 .content-container {
-  padding: 40px 30px;
+  padding: 34px 30px;
 }
 
 .content-container img {
@@ -143,8 +142,6 @@ transition: all 130ms ease-in-out;
 .wrapper {
   padding: 30px 20px;
   background-image: var(--branding-image);
-   background-attachment: local;
-  background-repeat: inherit;
   background-position: center;
   -webkit-background-size: cover;
 }
@@ -173,17 +170,43 @@ transition: all 130ms ease-in-out;
 .contact-container h1 {
   font-family: var(--heading-font-family);
   color: white;
-  font-size: 70px;
+  font-size: 60px;
 }
 
 .contact-container {
-  background-color: var(--secondary-page-color);
-  padding: 30px 20px;
+  padding: 40px 20px;
+   background-image: var(--branding-image);
+  background-position: center;
+  -webkit-background-size: cover;
 }
 
 .contact-header {
   max-width: 450px;
   background-color: black;
   box-shadow: var(--button-box-shadow);
+}
+
+.contact-info {
+  background-image: var(--branding-image);
+  width: 500px;
+  padding: 23px;
+  margin: 13px auto;
+  border-radius: 10px;
+  box-shadow: 4px 8px 13px 2px rgba(0,0,0,0.17);
+  opacity: 0.8;
+}
+
+.contact-info a {
+  text-decoration: none;
+  color: black;
+}
+
+.contact-info a:hover {
+  color: white;
+}
+
+.contact-info h5 {
+  color: var(--secondary-font-color);
+  font-weight: medium;
 }
 
