--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,12 +27,13 @@ nav li {
 nav li a {
     text-decoration: none;
   color: white !important;
-  transition: all 100ms ease-in-out;
 }
 
 nav a:hover,
 nav li .active {
   color: black !important;
+  letter-spacing: 0.0650em;
+  transition: all 200ms ease-in-out;
 }
 
 nav .logo {
@@ -70,6 +71,7 @@ footer a:hover {
   transition: all 130ms ease-in-out;
 }
 
+ 
 .hero {
   padding: 120px 20px;
   background: var(--branding-image);
@@ -104,6 +106,8 @@ footer a:hover {
 
 .btn-branding:hover {
 color: var(--secondary-page-color);
+letter-spacing: 0.0650em;
+transition: all 100ms ease-in-out;
 }
 
 .middle-hero {
@@ -202,6 +206,7 @@ transition: all 130ms ease-in-out;
 
 .contact-info a:hover {
   color: white;
+  transition: all 150ms ease-in-out;
 }
 
 .contact-info h5 {
