--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,7 +4,7 @@
     --secondary-page-color: #C1DCC1;
     --heading-font-family: 'Abril Fatface', cursive;
     --default-font-family: 'Poppins', sans-serif;
-    --heading-font-color: #B29E89;
+    --heading-font-color: #bfb4a8;
     --secondary-font-color: #A7BFA7;
     --branding-image: url(/images/linen.jpg);
     --button-box-shadow: 9px 7px 0px 1px #FFFFFF;
@@ -73,7 +73,7 @@ footer a:hover {
 
  
 .hero {
-  padding: 120px 20px;
+  padding: 95px 20px;
   background: var(--branding-image);
   background-position: center;
   -webkit-background-size: cover;
@@ -130,7 +130,12 @@ transition: all 100ms ease-in-out;
 
 .bottom-hero img:hover {
 opacity: 0.5;
-transition: all 130ms ease-in-out;
+transition: all 150ms ease-in-out;
+max-width: 350px;
+}
+
+.bottom-hero a {
+  text-decoration: none;
 }
 
 .about-container {
@@ -139,7 +144,7 @@ transition: all 130ms ease-in-out;
 
 .about-container img {
   max-width: 275px;
-  box-shadow: 4px 8px 13px 2px rgba(0,0,0,0.17);
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .wrapper {
@@ -231,5 +236,39 @@ transition: all 130ms ease-in-out;
   color: var(--secondary-page-color) !important;
 }
 
-
+.arrow{
+    position: absolute;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.arrow span{
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    transform: rotate(45deg);
+    margin: -15px;
+    animation: animate 2s infinite;
+}
+.arrow span:nth-child(2){
+    animation-delay: -0.2s;
+}
+.arrow span:nth-child(3){
+    animation-delay: -0.4s;
+}
+@keyframes animate {
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px,-20px);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(20px,20px);
+    }
+}
 
