--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -287,6 +287,10 @@ max-width: 350px;
 
 @media (max-width: 600px) {
 
+  body {
+    text-align: center;
+  }
+
   h2 {
     font-size: 45px;
   }
@@ -346,7 +350,12 @@ max-width: 350px;
 }
 
 .mobile-btn {
-  font-size: 9px !important;
+  font-size: 11px !important;
+}
+
+.hero {
+  padding: 50px;
+
 }
 
 }
