--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -301,10 +301,11 @@ max-width: 350px;
 
   .hero h1 {
     font-size: 67px;
+    line-height: 1;
   }
 
   .hero h3 {
-    font-size: 23px;
+    font-size: 21px;
   }
 
   .hero h4 {
@@ -354,7 +355,7 @@ max-width: 350px;
 }
 
 .hero {
-  padding: 50px;
+  padding: 50px 20px;
 
 }
 
