--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -306,6 +306,21 @@ border: 2px solid black;
 .arrow span:nth-child(3){
     animation-delay: -0.4s;
 }
+
+.netlify-link,
+.netlify-link a {
+  font-size: 11px;
+  color: black;
+}
+
+.netlify-link a {
+  padding: 0;
+}
+
+.netlify-link a:hover {
+  color: white;
+}
+
 @keyframes animate {
     0%{
         opacity: 0;
