--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,7 +47,6 @@ nav {
   background-color: var(--header-footer-color);
 }
 
-
 nav li {
   margin-left: 15px;
 }
@@ -66,7 +65,6 @@ nav li .active {
 
 nav .logo {
  font-family: signature;
- 
 }
 
 h2 {
@@ -112,7 +110,7 @@ footer a:hover {
 .hero h1 {
   font-size: 96px;
   font-family: var(--heading-font-family);
-  color: var(--primary-page-color);
+  color: white;
 }
 
 .hero h3 {
